# MesonX

./: README.md  main.c  main.cpp  meson.build
math/: add.cpp
tests/: add_test.cpp  test_main.cpp
